# KFTurboStatusServer

./: .dockerignore  .gitignore  Dockerfile  KFTurboDiscordEmbed.py  KFTurboServerStatus.py  KFTurboServerStatusDiscordBot.py  KFTurboServerStatusTypes.py  KFTurboWebServer.py  README.md  StatusConnectionManager.py  docker-compose.yml  pyproject.toml  test_KFTurboServerStatus.py  test_KFTurboServerStatusDiscordBot.py
