[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfturbostatusserver"
version = "0.1.0"
description = "Discord bot and TCP listener for Killing Floor Turbo server status updates."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "discord.py>=2.3,<3.0",
    "aiohttp>=3.9,<4.0",
]

[tool.setuptools]
py-modules = [
    "KFTurboServerStatus",
    "KFTurboDiscordEmbed",
    "KFTurboWebServer",
    "KFTurboServerStatusTypes",
    "StatusConnectionManager",
]
